src/components/Output/styles.module.scss
.output {
    background: #111;
    color: white;

    pre {
        padding: 10px 20px;

        span {
            user-select: none;
        }
    }
    
    button {
        color: #ddd;
        width: 100%;
        cursor: pointer;
        border-top: 1px solid #222;
        padding: 10px 20px;
        outline: none;

        &:hover {
            background: #1f1f33;
        }

        &::-moz-focus-inner {
            border: 0;
        }  
    }
}

